[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ml-classification-check"
version = "0.1.0"
description = "Automatic sanity checks for classification models — catches data leakage, class imbalance, feature issues and more before you train."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
authors = [
    {name = "Shriparna Prasad", email = "shriparnaprasad2005@gmail.com"}
]
keywords = [
    "machine learning",
    "classification",
    "data leakage",
    "sanity check",
    "dataset validation",
    "binary classification",
    "multiclass classification",
    "multilabel classification",
    "kaggle",
    "mlops"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "pandas>=1.3.0",
    "numpy>=1.21.0",
    "scikit-learn>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "build",
    "twine"
]

[project.urls]
Homepage = "https://github.com/S-h-r-i-p-a-r-n-a/ml-classification-check"
"Bug Tracker" = "https://github.com/-h-r-i-p-a-r-n-a/ml-classification-check/issues"
Documentation = "https://github.com/S-h-r-i-p-a-r-n-a/ml-classification-check#readme"




